Bug 427830 - Desktop context menu has an extra separator
Summary: Desktop context menu has an extra separator
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.20.0
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2020-10-16 19:20 UTC by popov895
Modified: 2020-11-11 17:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.77
Sentry Crash Report:


Attachments
Context menu with extra separator (324.78 KB, image/png)
2020-10-16 19:20 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2020-10-16 19:20:41 UTC
Created attachment 132440 [details]
Context menu with extra separator

SUMMARY

Desktop context menu has an extra separator when you drag'n'drop file(s) onto it.

STEPS TO REPRODUCE

1. Open Dolphin
2. Select any file
3. Drag'n'drop it to the desktop

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: KDE neon 5.20 User Edition / X11
KDE Plasma Version: 5.20.0
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0
Comment 1 Patrick Silva 2020-10-16 23:23:40 UTC
possibly dupe of bug 427804
Comment 2 Nate Graham 2020-10-21 14:08:14 UTC
Hah, I was meaning to fix this. Thanks for the reminder.
Comment 3 David Redondo 2020-11-11 12:28:41 UTC
Git commit c23f16d8f2a258eb090be75a98e40f0159bb8457 by David Redondo.
Committed on 11/11/2020 at 12:28.
Pushed by davidre into branch 'master'.

Do not add unnecessary separators

addExtraActions() will already add a separator before the cancel action or the
extra actions so we do not need to add one in fillPopupMenu.
Also if the first action of the extra actions is a separator we do not need to
add an additional one.

M  +8    -6    src/widgets/dropjob.cpp

https://invent.kde.org/frameworks/kio/commit/c23f16d8f2a258eb090be75a98e40f0159bb8457